fix spacing bug on tour dates styles

--- a/wp-content/themes/kemp/scss/main.css
+++ b/wp-content/themes/kemp/scss/main.css
@@ -1566,13 +1566,13 @@ section.travel-dates {
     z-index: 99;
     margin-bottom: 25px;
     max-width: 100%;
-    line-height: 15px; }
+    line-height: 21px; }
   section.travel-dates .entry-header {
     position: relative;
-    -webkit-transform: translate3d(0, -12px, 0);
-    -moz-transform: translate3d(0, -12px, 0);
-    -ms-transform: translate3d(0, -12px, 0);
-    transform: translate3d(0, -12px, 0); }
+    -webkit-transform: translate3d(0, -11px, 0);
+    -moz-transform: translate3d(0, -11px, 0);
+    -ms-transform: translate3d(0, -11px, 0);
+    transform: translate3d(0, -11px, 0); }
   section.travel-dates .entry-content {
     padding-left: 4px;
     line-height: 4px; }
