--- a/wp-content/themes/kemp/scss/partials/_travel-dates.scss
+++ b/wp-content/themes/kemp/scss/partials/_travel-dates.scss
@@ -62,7 +62,7 @@ section.travel-dates {
 		z-index: 99;
 		margin-bottom: 25px;
 		max-width: 100%;
-		line-height: 15px;
+		line-height: 21px;
 	}
 /*
 	.entry-header:after {
@@ -79,7 +79,7 @@ section.travel-dates {
 */
 	.entry-header {
 		position: relative;
-		@include translate(0,-12px,0);
+		@include translate(0,-11px,0);
 	}
 	.entry-content {
 		padding-left: 4px;
